# ETH-SegReg

./: .gitignore  CMakeLists.txt  LICENSE.txt  README  README.md  Readme.txt
doc/: Doxyfile.in  (+1 more)
source/: CMakeLists.txt
source/Applications/: .history.gasst  Alternating-JRS.cxx  Alternating-JRS2D-Bone.cxx  Alternating-JRS2D-Classifier.cxx  Alternating-JRS3D-Bone.cxx  Alternating-JRS3D.cxx  Alternating-segmentation-registration.cxx  AquircGlobalNorm2D.cxx  AquircLocalDeformationAndError2D.cxx  AquircLocalDeformationAndError3D.cxx  AquircLocalError2D.cxx  CLERC2D.cxx  CLERC3D.cxx  CMakeLists.txt  ComposeDeformations2D.cxx  Fast_PD.cpp  Multiresolution-ARS2D.cxx  Multiresolution-ARS3D.cxx  Multiresolution-AlternatingSegReg.cxx  Multiresolution-AlternatingSegmentationRegistration.cxx  Multiresolution-Registration.cxx  Multiresolution-SRS2D.cxx  Multiresolution-SRS3D-Multilabel.cxx  Multiresolution-SRS3D.cxx  Multiresolution-SegmentationRegistration-Subsampling-2D.cxx  Multiresolution-SegmentationRegistration.cxx  Multiresolution-SegmentationRegistration2DClassifier.cxx  Multiresolution-SegmentationRegistration3D.cxx  RegistrationNetwork-2D.cxx  RegistrationPropagation-2D.cxx  RegistrationPropagation-3D.cxx  SRS3D-Bone.cxx  SegNetwork-Connectivity.cxx  Segmentation2D.cxx  Segmentation3D.cxx  SegmentationFusion-2D.cxx  SegmentationFusion-3D.cxx  SegmentationNetwork-2D.cxx  SegmentationNetwork-3D.cxx  SegmentationNetworkV2-2D.cxx  (+7 more)
source/CBRR/: AquircLocalError2D.cxx  BaseLinearSolver.h  CLERC2D.cxx  CLERCIndependentDimensions.h  Registration-circles.h  SolveAquircLocalErrorAndResidual.h
source/Common/: .history.gasst  01-Preprocessing.hpp  ArgParse.h  ArgumentParser.h  CMakeLists.txt  ChamferDistanceTransform.h  DeformationCache.h  DsiplacementFieldCompositionFilter.h  FilterUtils.hpp  ImageRandomROIIterator.h  ImageUtils.cxx  ImageUtils.h  Log.h  Metrics.h  Preprocessing.h  SegmentationFusion.h  SegmentationMapper.hxx  SegmentationMapperBACKUP.hxx  SegmentationTools.hxx  SheetnessFilter.h  SheetnessMeasure.hpp  TemporalMedianImageFilter.h  TransformationUtils.h  boxfilter4.h  dataCostLCC.h  dataCostSSC.h  itkDisplacementFieldCompositionFilter.txx  itkFixedPointInverseDeformationFieldImageFilter.txx  itkGaussianImage.h  itkSubtractAbsImageFilter.h  mmalloc.h
source/ConsistencyBasedRegistrationRectification/: AquircGlobalNorm2D.cxx  AquircLocalError2D.cxx  CBRR2D.cxx  CBRR3D.cxx  CLERCIndependentDimensions.h  CMakeLists.txt  SolveAquircLocalDeformationNorms.h  SolverAQUIRCGlobal.h  SolverAQUIRCLocal.h  SolverConsistencyCBRR.h
source/MarkovRandomFieldRegistrationFusion/: CMakeLists.txt  MRFRegistrationFuser.h  Registration-Fusion-MRF.h  Registration-Propagation-Indirect-CircleWeighting.h  Registration-Propagation-Indirect-Statismo.h  Registration-Propagation-Indirect.h  Registration-Propagation-LocalSim.h  Registration-Propagation-MRF.h  Registration-Propagation-Modular.h  RegistrationFusion2D.cxx  RegistrationFusion3D.cxx  RegistrationPropagation-2D.cxx  RegistrationPropagation-3D.cxx
source/Models/: Alternating-HierarchicalSRSImageToImageFilter.h  AlternatingSegmentationRegistrationLabel.h  BaseLabel.h  BaseMRF.h  BasePotential.h  CMakeLists.txt  Classifier.h  Edge.h  FAST-PD-Registration-mrf.h  FAST-PD-mrf-optimisation.h  FastRegistrationGraph.h  Graph-Glocker.h  Graph-ITKStyle.h  Graph-bak.h  Graph.cxx  Graph.h  Grid.h  HierarchicalJRSImageToImageFilter-2.h  HierarchicalJRSImageToImageFilter.h  HierarchicalSRSImageToImageFilter.h  ImageRegistrationFilter.h  Label.h  MRF-FAST-PD.h  MRF-GC.h  MRF-GCO.h  MRF-TRW-S.h  MRF-TRWS-SimpleGraph.h  MRF.cxx  MRF.h  NewClassifier.h  Node.cxx  Node.h  PairwisePotential.h  Potential-Coherence-Pairwise.h  Potential-Registration-NCC.h  Potential-Registration-Pairwise.h  Potential-Registration-Unary.h  Potential-SRS-MultiVariateNCC.h  Potential-SRS-NCC-Bone.h  Potential-SRS-NCC.h  (+29 more)
source/Propagation/: BaseLinearSolver.h  CLERCIndependentDimensions.h  CMakeLists.txt  MRFRegistrationFuser.h  Registration-Fusion-MRF.h  Registration-Propagation-Indirect-CircleWeighting.h  Registration-Propagation-Indirect-Statismo.h  Registration-Propagation-Indirect.h  Registration-Propagation-LocalSim.h  Registration-Propagation-MRF.h  Registration-circles.h  Segmentation-Propagation-DefWeighting.h  Segmentation-Propagation-Modular.h  Segmentation-Propagation-efficient1Hop.h  SegmentationNetwork.h  SolveAquircGlobalDeformationNorm.h  SolveAquircGlobalDeformationNormCVariables.h  SolveAquircLocalComposedDeformations.h  SolveAquircLocalDeformationAndError.h  SolveAquircLocalDeformationAndErrorIndependentDimensions.h  SolveAquircLocalDeformationNorms.h  SolveAquircLocalDeformations.h  SolveAquircLocalError.h  SolveAquircLocalInterpolatedError.h  changedsolverbackup2.h  diff.cpp
source/SegmentationRegistration/: BaseLabel.h  BaseMRF.h  CMakeLists.txt  Classifier.h  Graph-ITKStyle.h  Graph.h  HierarchicalSRSImageToImageFilter.h  MRF-FAST-PD.h  MRF-GC.h  MRF-GCO.h  MRF-opengm.h  NewClassifier.h  Potential-Coherence-Pairwise.h  Potential-Registration-Pairwise.h  Potential-Registration-Unary.h  Potential-Segmentation-Pairwise.h  Potential-Segmentation-Unary.h  Potential-SegmentationRegistration-Pairwise.h  Potential-SegmentationRegistrationPairwise.h  SRSConfig.h  SubsamplingGraph.h
source/SemiSupervisedSegmentationPropagation/: CMakeLists.txt  SegNetwork-Connectivity.cxx  Segmentation-Fusion-Modular.h  Segmentation-Propagation-Modular.h  Segmentation-Propagation-efficient1Hop.h  Segmentation-Propagation.h  SegmentationFusion-2D.cxx  SegmentationFusion-3D.cxx  SegmentationNetwork-2D.cxx  SegmentationNetwork-3D.cxx  SegmentationNetwork.h  SegmentationPropagation-2D.cxx  SegmentationPropagation-3D.cxx
source/SimultaneousRegistrationSegmentation/: CMakeLists.txt  Readme.md
source/Tools/: AddDeformations2D.cxx  AddNoiseToImage2D.cxx  AddNoiseToImage3D.cxx  AddSegmentationToImage3D.cxx  AntialiasImage3D.cxx  AutoCropImageWithBorder3D.cxx  AverageImages3D.cxx  BiasCorrection3D.cxx  BinaryThresholdImage3D.cxx  CMakeLists.txt  CastShortToUchar2D.cxx  CombineAffine3D.cxx  (+85 more)
(+142 files in other folders)
