PROJECT(ConsitencyBasedRegistrationRectification)
INCLUDE_REGULAR_EXPRESSION("^.*$")


find_package(MATLAB REQUIRED)

option( USE_MIND "Use MIND local similarity functions" ON )
if( ${USE_MIND} MATCHES "ON" )
  add_definitions(-DWITH_MIND)
  set(DIR_MIND "${SRS-MRF_SOURCE_DIR}/External/MIND" CACHE  FILEPATH "Directory for MIND")
  include_directories( ${DIR_MIND} )
endif()

#Aquirc like stuff
#message( ${MATLAB_ENG_LIBRARY}  ${MATLAB_MX_LIBRARY})
include_directories(${MATLAB_INCLUDE_DIR})

ADD_EXECUTABLE(AquircGlobalNorm2D AquircGlobalNorm2D.cxx )
TARGET_LINK_LIBRARIES(AquircGlobalNorm2D    ${ITK_LIBRARIES} ${MATLAB_ENG_LIBRARY} ${MATLAB_MX_LIBRARY}  )
ADD_EXECUTABLE(AquircLocalErrors2D AquircLocalError2D.cxx )
TARGET_LINK_LIBRARIES(AquircLocalErrors2D   ${ITK_LIBRARIES} ${MATLAB_ENG_LIBRARY} ${MATLAB_MX_LIBRARY}  )

ADD_EXECUTABLE(CBRR2D CBRR2D.cxx )
TARGET_LINK_LIBRARIES(CBRR2D Utils      ${ITK_LIBRARIES} ${MATLAB_ENG_LIBRARY} ${MATLAB_MX_LIBRARY}  )
ADD_EXECUTABLE(CBRR3D CBRR3D.cxx )
TARGET_LINK_LIBRARIES(CBRR3D Utils      ${ITK_LIBRARIES} ${MATLAB_ENG_LIBRARY} ${MATLAB_MX_LIBRARY}  )
